Changed Main file name, updated scripts, service.  Added Wired PTT Input GPIO and Config setting, improved serial

--- a/Decoder.config
+++ b/Decoder.config
@@ -98,3 +98,11 @@ GPIO_BAND_5_PIN=0
 GPIO_BAND_5_PIN_INVERT=False
 GPIO_PTT_5_PIN=0
 GPIO_PTT_5_PIN_INVERT=False
+
+
+# ---------------------------------
+# This is the pin assigned to monitor a wired PTT input from the radio
+# ---------------------------------
+
+GPIO_PTT_IN_PIN=11
+GPIO_PTT_IN_PIN_INVERT=False
