Added Wired PTT pins and mode select

--- a/Decoder.config
+++ b/Decoder.config
@@ -1,14 +1,15 @@
 #------------------------------------------
-# User settings
+# User preferences
 #------------------------------------------
 
-# These are working values
 # enables a DHT11 temp/humidity sensor.  If false CPU still logged.
 DHT11_ENABLE=False
 
 # set how often the temps will be measured and recorded
 DHT11_TIME=600
 
+# To use a wired GPIO input set this = 1, else set to 0 for Polled PTT status
+WIRED_PTT=1
 
 #----------------------
 # This is a dummy value waiting for coding
@@ -21,12 +22,10 @@ DHT11_PIN=14
 # --------------------------------
 # 
 # Enter the model radio to get the right band assignments
-# Choices are IC705, IC905
-# For the IC-9700 choose IC905
+# Choices are IC705, IC905, or IC-9700
 #
 # --------------------------------
 
-#RADIO_MODEL=IC905
 RADIO_MODEL=IC705
 
 # --------------------------------
@@ -34,22 +33,22 @@ RADIO_MODEL=IC705
 # --------------------------------
 
 
-BAND_0=0x00
+BAND_0=0x01
 PTT_0=0x01
 
-BAND_1=0x01
+BAND_1=0x02
 PTT_1=0x01
 
-BAND_2=0x02
+BAND_2=0x01
 PTT_2=0x01
 
-BAND_3=0x03
+BAND_3=0x00
 PTT_3=0x01
 
-BAND_4=0x04
+BAND_4=0x01
 PTT_4=0x01
 
-BAND_5=0x05
+BAND_5=0x02
 PTT_5=0x01
 
 
@@ -63,8 +62,8 @@ GPIO_BAND_0_PIN_INVERT=True
 #4-relay HAT
 #GPIO_BAND_0_PIN=5
 #GPIO_BAND_0_PIN_INVERT=False
-GPIO_PTT_0_PIN=0
-GPIO_PTT_0_PIN_INVERT=False
+GPIO_PTT_0_PIN=21
+GPIO_PTT_0_PIN_INVERT=True
 
 # 3-Relay HAT
 GPIO_BAND_1_PIN=20
@@ -72,37 +71,37 @@ GPIO_BAND_1_PIN_INVERT=True
 #4-relay HAT
 #GPIO_BAND_1_PIN=6
 #GPIO_BAND_1_PIN_INVERT=False
-GPIO_PTT_1_PIN=0
-GPIO_PTT_1_PIN_INVERT=False
+GPIO_PTT_1_PIN=12
+GPIO_PTT_1_PIN_INVERT=True
 
 # 3-Relay HAT
-GPIO_BAND_2_PIN=21
+#GPIO_BAND_2_PIN=21
+GPIO_BAND_2_PIN=12
 GPIO_BAND_2_PIN_INVERT=True
 #4-relay HAT
 #GPIO_BAND_2_PIN=13
 #GPIO_BAND_2_PIN_INVERT=False
-GPIO_PTT_2_PIN=0
-GPIO_PTT_2_PIN_INVERT=False
+GPIO_PTT_2_PIN=12
+GPIO_PTT_2_PIN_INVERT=True
 
-GPIO_BAND_3_PIN=0
+GPIO_BAND_3_PIN=12
 GPIO_BAND_3_PIN_INVERT=False
-GPIO_PTT_3_PIN=0
-GPIO_PTT_3_PIN_INVERT=False
+GPIO_PTT_3_PIN=12
+GPIO_PTT_3_PIN_INVERT=True
 
-GPIO_BAND_4_PIN=0
+GPIO_BAND_4_PIN=12
 GPIO_BAND_4_PIN_INVERT=False
-GPIO_PTT_4_PIN=0
-GPIO_PTT_4_PIN_INVERT=False
+GPIO_PTT_4_PIN=12
+GPIO_PTT_4_PIN_INVERT=True
 
-GPIO_BAND_5_PIN=0
+GPIO_BAND_5_PIN=12
 GPIO_BAND_5_PIN_INVERT=False
-GPIO_PTT_5_PIN=0
-GPIO_PTT_5_PIN_INVERT=False
-
+GPIO_PTT_5_PIN=12
+GPIO_PTT_5_PIN_INVERT=True
 
 # ---------------------------------
 # This is the pin assigned to monitor a wired PTT input from the radio
 # ---------------------------------
 
-GPIO_PTT_IN_PIN=11
-GPIO_PTT_IN_PIN_INVERT=False
+GPIO_PTT_IN_PIN=16
+GPIO_PTT_IN_PIN_INVERT=True
