Completed IC-9700 support for Sub Band. Add new config MAIN_TX for 9700.

--- a/Decoder.config
+++ b/Decoder.config
@@ -18,20 +18,24 @@ WIRED_PTT=1
 # sets the gpio pin number for the install script to use in /boot/firmware/config.txt
 DHT11_PIN=14
 
-
-# --------------------------------
-# 
+# -------------------------------- 
 # Enter the model radio to get the right band assignments
 # Choices are IC705, IC905, or IC-9700
-#
 # --------------------------------
 
 RADIO_MODEL=IC705
 
+# -------------------------------- 
+# IC-9700 Only
+# 1 = Use main band only for Band Relays
+# 0 = Switch Band relays to Sub Band in RX, then to MAIN band in TX (crossband split)
+# --------------------------------
+
+MAIN_TX = 1
+
 # --------------------------------
 # list of all band and ptt pin assignments, patterns and inversions
 # --------------------------------
-
 
 BAND_0=0x01
 PTT_0=0x01
@@ -50,7 +54,6 @@ PTT_4=0x01
 
 BAND_5=0x02
 PTT_5=0x01
-
 
 # ---------------------------------
 # One or more pins may be mapped to one band so they are simply numbered
